--- a/Payments/src/requirements.txt
+++ b/Payments/src/requirements.txt
@@ -3,5 +3,6 @@ dj-database-url==0.3.0
 dj-static==0.0.6
 django-appconf==0.6
 djangorestframework
+django-redis-cache
 drf-nested-routers==0.9.0
 requests>=2.5.1
